added pandas and pandas-ta to reqs

--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,8 @@ nest-asyncio==1.4.1
 notebook==6.1.4
 numpy==1.19.2
 packaging==20.4
+pandas==1.1.2
+pandas-ta==0.1.97b0
 pandocfilters==1.4.2
 parso==0.7.1
 pexpect==4.8.0
